--- a/task3.rb.example
+++ b/task3.rb.example
@@ -1,5 +1,12 @@
-a = ARGV[0].to_i
+a=ARGV[0].to_i
 b=ARGV[1].to_i
-
-x=a.gcd(b)
-puts x
+while (a!=0&&b!=0)
+   if(a>b)
+       a=a%b
+    else
+        b=b%a
+    end
+end
+s=a+b
+s=s.abs
+puts s
